--- a/Mod_mess Demonstration.ipynb
+++ b/Mod_mess Demonstration.ipynb
@@ -11,11 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Poster on this topic: https://journals.uc.edu/index.php/Undergradshowcase/article/view/4117/3124\n",
+    "\n",
+    "\n",
+    "Logbook posting on this topic: https://cmb-s4.uchicago.edu/wiki/index.php/PureB_by_Messenger_Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The messenger method is a method devised by Elsner and Wandelt in 2012 (https://arxiv.org/pdf/1210.4931.pdf) in order to iteratively apply a wiener filter to data sets. The code in the python module mod_mess.py (https://github.com/michaelray1/messenger_method) implements this method as applied to CMB polarization data in order to solve for a B mode only map from input partial-sky CMB data. This allows us to estimate the B mode power spectrum of the CMB which can tell us information about the possible inflationary epoch of the universe.\n",
     "\n",
     "This filter takes in a set of three maps corresponding to Stoke's parameters I, Q, and U. The output is then a pure B mode, filtered set of these three maps. Through this notebook I will show how to use the code to filter maps. In particular, I will filter a set of simulated CMB-only maps, a set of noise-only maps, and a set of combined maps which are meant to simulate what we would truly observe through a telescope. I'll then describe how an analysis of the effectiveness of this filter is done.\n",
     "\n",
-    "This code relies heavily on the healpy package. Everything about healpy can be found here: https://healpy.readthedocs.io/en/latest/ . Another paper that was very influential for this work can be found here: https://arxiv.org/pdf/1610.03345.pdf . To learn more about this work, check out the poster and logbook posting linked to in the README file of this github (https://github.com/michaelray1/messenger_method)."
+    "This code relies heavily on the healpy package. Everything about healpy can be found here: https://healpy.readthedocs.io/en/latest/ . Another paper that was very influential for this work can be found here: https://arxiv.org/pdf/1610.03345.pdf ."
    ]
   },
   {
